[Update] Displays.SSD1306 0.11.0 (Includes GraphicsLibrary package reference)

--- a/Source/Meadow.Foundation.Peripherals/Displays.Ssd1306/Driver/Displays.SSD1306/Displays.SSD1306.csproj
+++ b/Source/Meadow.Foundation.Peripherals/Displays.Ssd1306/Driver/Displays.SSD1306/Displays.SSD1306.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Meadow.Sdk/1.1.0">
+﻿<Project Sdk="Meadow.Sdk/1.1.0">
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <OutputType>Library</OutputType>
@@ -9,11 +9,12 @@
     <PackageIconUrl>https://github.com/WildernessLabs/Meadow.Foundation/blob/master/Source/icon.png?raw=true</PackageIconUrl>
     <RepositoryUrl>https://github.com/WildernessLabs/Meadow.Foundation</RepositoryUrl>
     <PackageTags>Meadow, Meadow.Foundation, Displays, OLED</PackageTags>    
-    <Version>0.10.4</Version>
+    <Version>0.11.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Driver for SSD1306 OLED display</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Meadow.Foundation" Version="0.11.0" />
+    <PackageReference Include="Meadow.Foundation.Displays.GraphicsLibrary" Version="0.8.7" />
   </ItemGroup>
 </Project>
