--- a/Source/Meadow.Foundation.Peripherals/Sensors.Motion.Mpu6050/Samples/Sensors.Motion.Mpu6050_Sample/Sensors.Motion.Mpu6050_Sample.csproj
+++ b/Source/Meadow.Foundation.Peripherals/Sensors.Motion.Mpu6050/Samples/Sensors.Motion.Mpu6050_Sample/Sensors.Motion.Mpu6050_Sample.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Meadow.Sdk/1.1.0">
+﻿<Project Sdk="Meadow.Sdk/1.1.0">
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <OutputType>Exe</OutputType>
     <AssemblyName>App</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.Sensors.Motion.GY521" Version="0.5.1" />
+    <PackageReference Include="Meadow.Foundation" Version="0.11.0" />
   </ItemGroup>
 </Project>
